admin UI enhanced

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="hero-content">
                 <h1 class="hero-title text-5xl md:text-7xl font-bold mb-6 leading-tight">
                     Your Dream Destination
-                    <span class="block text-yellow-300 bg-gradient-to-r from-yellow-300 to-yellow-400 bg-clip-text text-transparent animate-pulse">Awaits</span>
+                    <span class="block text-secondary-500 bg-gradient-to-r from-secondary-400 to-secondary-500 bg-clip-text text-transparent animate-pulse">Awaits</span>
                 </h1>
                 <p class="hero-subtitle text-xl md:text-2xl mb-8 max-w-3xl mx-auto leading-relaxed">
                     Discover breathtaking destinations, luxury accommodations, and unforgettable experiences with our expertly crafted travel packages.
@@ -126,7 +126,7 @@
                 
                 <!-- Interactive CTA Button -->
                 <div class="hero-buttons flex justify-center items-center mb-12">
-                    <button class="btn-primary bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-4 px-8 rounded-xl text-lg transition-all duration-300 transform hover:scale-105 hover:shadow-2xl shadow-lg group">
+                    <button class="btn-primary bg-secondary-500 hover:bg-secondary-600 text-primary-600 font-bold py-4 px-8 rounded-xl text-lg transition-all duration-300 transform hover:scale-105 hover:shadow-2xl shadow-lg group">
                         <i class="fas fa-calendar-check mr-2 group-hover:rotate-12 transition-transform"></i>
                         <span>Explore Packages</span>
                         <div class="absolute inset-0 bg-white opacity-0 group-hover:opacity-20 rounded-xl transition-opacity"></div>
@@ -136,15 +136,15 @@
                 <!-- Interactive Stats -->
                 <div class="hero-stats grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto">
                     <div class="stat-item text-center group cursor-pointer">
-                        <div class="stat-number text-3xl md:text-4xl font-bold text-yellow-300 group-hover:scale-110 transition-transform duration-300">500+</div>
+                        <div class="stat-number text-3xl md:text-4xl font-bold text-secondary-500 group-hover:scale-110 transition-transform duration-300">500+</div>
                         <div class="stat-label text-sm md:text-base opacity-90">Happy Travelers</div>
                     </div>
                     <div class="stat-item text-center group cursor-pointer">
-                        <div class="stat-number text-3xl md:text-4xl font-bold text-yellow-300 group-hover:scale-110 transition-transform duration-300">50+</div>
+                        <div class="stat-number text-3xl md:text-4xl font-bold text-secondary-500 group-hover:scale-110 transition-transform duration-300">50+</div>
                         <div class="stat-label text-sm md:text-base opacity-90">Destinations</div>
                     </div>
                     <div class="stat-item text-center group cursor-pointer">
-                        <div class="stat-number text-3xl md:text-4xl font-bold text-yellow-300 group-hover:scale-110 transition-transform duration-300">24/7</div>
+                        <div class="stat-number text-3xl md:text-4xl font-bold text-secondary-500 group-hover:scale-110 transition-transform duration-300">24/7</div>
                         <div class="stat-label text-sm md:text-base opacity-90">Support</div>
                     </div>
                 </div>
