--- a/admin.html
+++ b/admin.html
@@ -130,7 +130,7 @@
             <div class="bg-white rounded-lg shadow p-3 sm:p-6">
                 <div class="flex items-center">
                     <div class="p-1 sm:p-2 bg-purple-100 rounded-lg">
-                        <i class="fas fa-dollar-sign text-purple-600 text-sm sm:text-xl"></i>
+                        <i class="fas fa-peso-sign text-purple-600 text-sm sm:text-xl"></i>
                     </div>
                     <div class="ml-2 sm:ml-4">
                         <p class="text-xs sm:text-sm font-medium text-gray-600">Average Price</p>
@@ -159,7 +159,7 @@
                 <i class="fas fa-crown mr-1 sm:mr-2"></i>Luxury
             </button>
             <button id="filter-budget" class="filter-btn bg-green-600 hover:bg-green-700 text-white px-3 sm:px-4 py-2 rounded-lg font-medium transition-colors text-xs sm:text-sm">
-                <i class="fas fa-dollar-sign mr-1 sm:mr-2"></i>Budget
+                <i class="fas fa-peso-sign mr-1 sm:mr-2"></i>Budget
             </button>
         </div>
 
