--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                     </button>
                 </div>
                 <div class="flex-1 flex flex-col justify-center items-center space-y-8">
-                    <a href="#home" class="mobile-nav-link text-2xl font-medium text-gray-700 hover:text-primary-600 transition-colors">Home</a>
-                    <a href="#packages" class="mobile-nav-link text-2xl font-medium text-gray-700 hover:text-primary-600 transition-colors">Packages</a>
-                    <a href="#about" class="mobile-nav-link text-2xl font-medium text-gray-700 hover:text-primary-600 transition-colors">About</a>
-                    <a href="#contact" class="mobile-nav-link text-2xl font-medium text-gray-700 hover:text-primary-600 transition-colors">Contact</a>
+                    <a href="#home" class="mobile-nav-link uniform-nav-btn">Home</a>
+                    <a href="#packages" class="mobile-nav-link uniform-nav-btn">Packages</a>
+                    <a href="#about" class="mobile-nav-link uniform-nav-btn">About</a>
+                    <a href="#contact" class="mobile-nav-link uniform-nav-btn">Contact</a>
                 </div>
             </div>
         </div>
