--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <i class="fas fa-plane text-primary-600 text-3xl"></i>
                         </div>
                         <h3 class="text-2xl font-semibold text-gray-600 mb-3">Loading Packages...</h3>
-                        <p class="text-gray-500 text-lg">Fetching your travel packages from the database</p>
+                        <p class="text-gray-500 text-lg">Please Wait... Fetching available packages</p>
                     </div>
                 </div>
             </div>
