--- a/index.html
+++ b/index.html
@@ -392,11 +392,8 @@
                 </div>
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Destinations</h4>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Europe</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Asia</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Africa</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Americas</a></li>
+                    <ul class="space-y-2">              
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Philippines 🇵🇭</a></li>
                     </ul>
                 </div>
                 <div>
