--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                 
                 <!-- Interactive CTA Button -->
                 <div class="hero-buttons flex justify-center items-center mb-12">
-                    <button class="btn-primary bg-secondary-500 hover:bg-secondary-600 text-primary-600 font-bold py-4 px-8 rounded-xl text-lg transition-all duration-300 transform hover:scale-105 hover:shadow-2xl shadow-lg group">
+                    <a href="#packages" class="btn-primary bg-secondary-500 hover:bg-secondary-600 text-primary-600 font-bold py-4 px-8 rounded-xl text-lg transition-all duration-300 transform hover:scale-105 hover:shadow-2xl shadow-lg group">
                         <i class="fas fa-calendar-check mr-2 group-hover:rotate-12 transition-transform"></i>
                         <span>Explore Packages</span>
                         <div class="absolute inset-0 bg-white opacity-0 group-hover:opacity-20 rounded-xl transition-opacity"></div>
-                    </button>
+                    </a>
                 </div>
                 
                 <!-- Interactive Stats -->
