--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="flex-shrink-0">
                         <h1 class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors cursor-pointer flex items-center">
                             <img src="logo/logo123.png" alt="Travelbooks Logo" class="w-8 h-8 mr-2 transform hover:rotate-12 transition-transform">
-                            Travelbooks
+                            Travelbooks (For Sale with Admin Panel so you can add/edit/delete packages)
                         </h1>
                     </div>
                 </div>
