for sale banner added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="flex-shrink-0">
                         <h1 class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors cursor-pointer flex items-center">
                             <img src="logo/logo123.png" alt="Travelbooks Logo" class="w-8 h-8 mr-2 transform hover:rotate-12 transition-transform">
-                            Travelbooks (For Sale with Admin Panel so you can add/edit/delete packages)
+                            Travelbooks 
                         </h1>
                     </div>
                 </div>
@@ -74,6 +74,13 @@
             </div>
         </div>
     </nav>
+
+    <!-- Floating For-Sale Ribbon -->
+    <div id="sale-ribbon" class="sale-ribbon" aria-label="This site is for sale">
+        <a href="#contact" class="tape" title="Includes Admin Panel. Supports packages, car rentals, tours & more.">
+            FOR SALE
+        </a>
+    </div>
 
     <!-- Hero Section -->
     <section id="home" class="relative h-screen flex items-center justify-center bg-gradient-to-br from-primary-600 via-blue-700 to-blue-900 overflow-hidden pt-16">
