--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         <a href="#contact" class="tape" title="Includes Admin Panel. Supports packages, car rentals, tours & more.">
             FOR SALE
         </a>
+        <button type="button" class="hint" aria-label="Click for sale details">
+            <i class="fas fa-hand-point-up"></i>
+            <span class="hint-text">Click me</span>
+        </button>
     </div>
 
     <!-- Hero Section -->
